--- a/index.html
+++ b/index.html
@@ -1,6 +1,28 @@
-<!doctype html>
-
+<!DOCTYPE html>
 <html>
+    <head>
+        <title>Building a Wireframe basic assignment</title>
+        <link rel="stylesheet" type="text/css" href="style.css">
+    </head>
+
+    <body>
+
+        <p id="header">header</p>
+
+        <nav id="nav">nav</nav>
+        
+        <section id="section">
+                section
+                <section id="article">
+                    article
+                    <p>h1, h2, h3</p>
+                    <p>p</p>
+                </section>
+        </section>
+         
+        <aside id="aside">aside</aside>       
+        <footer id="footer">footer</footer>
+    </body>
 
 
 </html>
